# Sofa.Qt

./: CMakeLists.txt  Sofa.QtConfig.cmake.in
.github/workflows/: ci.yml
bindings/: CMakeLists.txt
bindings/src/: Module_Sofa.Qt.cpp
src/sofa/gui/qt/: QtDataRepository.cpp  QtDataRepository.h  RealGUI.cpp  SofaPluginManager.cpp
src/sofa/gui/qt/panels/: QDocBrowser.cpp
src/sofa/qt/: AboutSOFADialog.cpp  AboutSOFADialog.h  DataFilenameWidget.cpp  DataFilenameWidget.h  DataWidget.cpp  DataWidget.h  DisplayFlagsDataWidget.cpp  DisplayFlagsDataWidget.h  FileManagement.cpp  FileManagement.h  GLPickHandler.cpp  GLPickHandler.h  GUI.ui  GenGraphForm.cpp  GenGraphForm.h  GenericWidget.h  GraphDataWidget.cpp  GraphDataWidget.h  GraphListenerQListView.cpp  GraphListenerQListView.h  GraphVisitor.cpp  GraphVisitor.h  LinkWidget.cpp  LinkWidget.h  MaterialDataWidget.cpp  MaterialDataWidget.h  ModifyObject.cpp  ModifyObject.h  PickHandlerCallBacks.cpp  PickHandlerCallBacks.h  PieWidget.cpp  PieWidget.h  QDataDescriptionWidget.cpp  QDataDescriptionWidget.h  QDisplayDataWidget.cpp  QDisplayDataWidget.h  QDisplayLinkWidget.cpp  QDisplayLinkWidget.h  QDisplayPropertyWidget.cpp  QDisplayPropertyWidget.h  (+64 more)
src/sofa/qt/Doc_Viewer/: index.html
src/sofa/qt/dockwidgets/: InspectorDock.cpp  InspectorDock.h  InspectorDock.ui
src/sofa/qt/panels/: QDocBrowser.cpp  QDocBrowser.h
src/sofa/qt/viewer/: EngineBackend.h  GLBackend.cpp  GLBackend.h  OglModelPolicy.cpp  OglModelPolicy.h  SofaViewer.cpp  SofaViewer.h  VisualModelPolicy.cpp  VisualModelPolicy.h
src/sofa/qt/viewer/qt/: QtViewer.h  (+1 more)
(+2 files in other folders)
